Initial go at displaying selected miner details on the right

--- a/MultiMiner.Win/DetailsControl.resx
+++ b/MultiMiner.Win/DetailsControl.resx
@@ -117,4 +117,141 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACq
+        GAAAAk1TRnQBSQFMAgEBBAEAASABAAEgAQABQAEAAUABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        BAABAQIAAYADAAEBAQABCAYAAYAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8A/wD/AP8A
+        /wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A
+        /wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wDWABTr
+        7AAU69kAEvcBABTrAQAS98YAEvcBABTrAQAS98YAEvcBABTrAQAS9woAAf8BBzHsAe8B9FcABP8sABL3
+        AQAU6wEAEvcJAAH/NewB9FEAAf8B8gEHAZIB6wRtAewB7wHxAf8oABL3AQAU6wEAEvcJAAEHNewB708A
+        AfMB7wHrC20B7AHyOgAU6xwAN+xNAAHzAZIQbQG8OQAU6xwAN+wMAB+QIAAB9AH3CW0B7ALtAewGbQHy
+        aAA37AwAApADegGQA3oBkAN6AZADegGQA3oBkAN6AZADegKQHgAB/wHvB20B7AEHAfMB/wQAAf8B8gHt
+        A20B7AH/PgAG9yMAN+wMAAKQA3oBkAN6AZADegGQA3oBkAN6AZADegGQA3oCkBwAAf8BvAHrBm0B9wHy
+        Af8JAAH/AewDbQHzPgAG9yMADuwC9APsAvQD7AL0A+wC9APsAvQD7AL0DuwMAAKQA3oBkAN6AZADegGQ
+        A3oBkAN6AZADegGQA3oCkBsAAfQB7AZtAe8B9A0AAfADbQHxPgAG9yMADuwC9APsAvQD7AL0A+wC9APs
+        AvQD7AL0DuwMAAKQA3oBkAN6AZADegGQA3oBkAN6AZADegGQA3oCkBoAAf8B7AVtAQcB9A8AAfMDbQHw
+        PgAG9yMADuwC9APsAvQD7AL0A+wC9APsAvQD7AL0DuwIADqQAwAB/wRtAe8B9BEAAfMDbQHwPgAG9yMA
+        DuwC9APsAvQD7AL0A+wC9APsAvQD7AL0DuwIADqQBAABBwFtAZIB9BMAAfQDbQHwPgAG9yMADuwC9APs
+        AvQD7AL0A+wC9APsAvQD7AL0DuwIADqQBQAC/xIAAfMBuwG0A4sBtAG1AfI8AAb3IwA37AgABZAEcQOQ
+        BHEDkARxI5AYAAHzCa0B8jsABvcjADfsCAAEkAX/AnEF/wJxBf8BcSKQFwAB8wutAfI6AAb3IwAH7AX0
+        Auwb9ALsBfQH7AgABJAF/wJxBf8CcQX/AXEEkAtxBJALcQSQFgAB8w2tAfI5AAb3IwAH7AX0Auwb9ALs
+        BfQH7AgABJAF/wJxBf8CcQX/AXEDkAz/A5AM/wSQFQAB8w+tAfI4AAb3IwAO7Bv0DuwIAASQBf8CcQX/
+        AnEF/wFxA5AM/wOQDP8EkBQAAfMRrQHyNwAG9yMADuwb9A7sCAAEkAX/AnEF/wJxBf8BcQOQDP8DkAz/
+        BJATAAHzE60B8jYABvcjAA7sG/QO7AgABJAF/wJxBf8CcQX/AXEDkAz/A5AM/wSQEgAB8xWtAfI1AAb3
+        IwAH7AX0Auwb9ALsBfQH7AgABJAF/wJxBf8CcQX/AXEDkAz/A5AM/wSQEQAB8xetAfI0AAb3IwAH7AX0
+        Auwb9ALsBfQH7AgABJAF/wJxBf8CcQX/AXEikBAAAfMZrQHyMwAG9yMADuwb9A7sCAAFkARxA5AEcQOQ
+        BHEFkAtxBJALcQSQDwAB8xutAfIyAAb3IwAO7AP0FfMD9A7sCAAFkBFxBZAM/wOQDP8EkA8AHK0BtDIA
+        BvcjAA7sA/QD8wH0Av8B9AHzAvQF8wH0Af8B9APzA/QO7AgABZARcQWQDP8DkAz/BJAPABytAbMyAAb3
+        IwAH7AX0AuwD9ALzAfQB7AERAUMB7wH/AewB6wH0BPMBbQERARMB8QLzA/QC7AX0B+wIAASQE/8EkAz/
+        A5AM/wSQDwAcrQGzMgAG9yMAB+wF9ALsA/QB8wH0AewBEAGSAfcB7wH/AewBbQH/AvMB9AHtAUMB7wLq
+        AfQB8wP0AuwF9AfsCAAEkBP/AXEDkAz/A5AM/wSQDwAcrQGzMgAG9yMADuwD9AHzAf8BFAHsAf8D9AHs
+        ARMB7AG8AvQBbQHsAf8BBwERAf8B8wP0DuwIAASQE/8BcQOQDP8DkAz/BJAPABytAbMyAAb3IwAO7AP0
+        AfMB/wFDAfcB9ALzAfQB7AEUAesBEAG8Af8BbQHsAf8BBwEQAf8B8wP0DuwIAASQE/8BcSKQDwAcrQGz
+        MgAE9yUADuwD9AHzAfQBEwHsAf8D9AHsAW0B/wETAewB/wFtAewB/wEHARAB/wHzA/QO7AgABJAT/wFx
+        BJALcQSQC3EEkA8AHK0BszIABPcCAAHzAe0Z7AHtAfMGAAfsBfQC7AP0AfMB9AHvARAB7AH3Ae8B/wHs
+        ARIB7wEQAZIB/wFtAewB/wEHARAB/wHzA/QC7AX0B+wIAASQE/8BcQOQDP8DkAz/BJAPABytAbMyAAT3
+        AgAd7AYAB+wF9ALsA/QC8wH0AfcBFAFDAfcB/wHsAhMB7AL0AewB7QH0AQcBFAH0AfMD9ALsBfQH7AgA
+        BJAT/wFxA5AM/wOQDP8EkA8AHK0BszIABPcCAALsGf8C7AYADuwD9APzAfQC/wH0AfME9ALzAvQC8wH0
+        AvMD9A7sCAAEkBP/AXEDkAz/A5AM/wSQDwAcrQGzMgAE9wIAAuwZ/wLsBgAO7AP0FfMD9A7sCAAEkBP/
+        AXEDkAz/A5AM/wSQDwAcrQGzMgAE9wIAAuwZ/wLsBgAO7Bv0DuwIAASQE/8BcQOQDP8DkAz/BJAPAByt
+        AbMyAAT3AgAC7Bn/AuwGAAfsBfQC7Bv0AuwF9AfsCAAEkBP/AXEikA8AHK0BszIABPcCAALsA/8T6wP/
+        AuwGAAfsBfQC7Bv0AuwF9AfsCAAEkBP/AXEEkAtxBJALcQSQDwAcrQGzMgAE9wIAAuwD/xPrA/8C7AYA
+        Duwb9A7sCAAEkBP/AXEDkAz/A5AM/wSQDwAcrQGzMgAE9wIAAuwZ/wLsBgAO7Bv0DuwIAASQE/8BcQOQ
+        DP8DkAz/BJAPAAG7G60BtDIABPcCAALsGf8C7AYADuwb9A7sCAAEkBP/AXEDkAz/A5AM/wSQDwAB9AGz
+        Gq0B8zgAAuwZ/wLsBgAH7AX0Auwb9ALsBfQH7AgABJAT/wFxA5AM/wOQDP8EkGQAAuwD/xPrA/8C7AYA
+        B+wF9ALsG/QC7AX0B+wIAASQE/8BcQOQDP8DkAz/BJARAAH/AuwT/wLsOwAC7AP/E+sD/wLsBgA37AgA
+        OpARAAH/AuwT/wLsOwAC7Bn/AuwGADfsCAA6kBEAAf8C7BP/Auw7AALsGf8C7AYADuwC9APsAvQD7AL0
+        A+wC9APsAvQD7AL0DuwIADqQEQAB/wLsE/8C7DsAAuwZ/wLsBgAO7AL0A+wC9APsAvQD7AL0A+wC9APs
+        AvQO7AgAOpARAAH/AuwT/wLsOwAC7AP/E+sD/wLsBgAO7AL0A+wC9APsAvQD7AL0A+wC9APsAvQO7AgA
+        AZY5kBEAAf8C7BP/Auw7AALsA/8T6wP/AuwGAA7sAvQD7AL0A+wC9APsAvQD7AL0A+wC9A7sUwAB/wLs
+        E/8C7DsAAuwZ/wLsBgAO7AL0A+wC9APsAvQD7AL0A+wC9APsAvQO7FMAAf8C7AL/AbwE7AEHA/8BBwTs
+        AQcC/wLsOwAC7Bn/AuwGADfsUwAB/wLsAv8B7wQSAfcD/wH3BBIBkgL/Auw7AALsGf8C7AYAN+xTAAH/
+        AuwC/wHvBBIB9wP/AfcEEgGSAv8C7DsAAewB6xn/AuwGADfsUwAB/wLsAv8B7wQSAfcD/wH3BBIBkgL/
+        Auw7AB2LBgA37FMAAf8C7AL/AfQE8gH0A/8B9ATyAfQC/wLsOwAdiwYAAbw17AEHUwAB/wLsE/8C7DsA
+        HYsGAAH/AZIz7AHtAf9TAAH/AuwT/wLsOwAdiwcAAf8BvAHtMOwBBwH/VAAB/wLsE/8C7DsAHYuRAAGS
+        Fuw7AB2LkQAB8wGSE+wBkgHz/wCbAAFCAU0BPgcAAT4DAAEoBAABAQIAAYADAAEBAQABAQYAARAWAAP/
+        /wD/AP8A/wD/AP8A/wD/AAkAMv8B8AIAHf8B8AIAG/8BgAEAARACAAGAAQABHxj/AYABAAEQAgABgAEA
+        AR8Y/wGAAQABEAIAAYABAAEfAfgGAAE/Cv8BhwX/AYABAAEQAgABgAEAAR8B8AYAAR8J/wHwAQABfwT/
+        AYABAAEQAgABgAEAAR8B8AYAAR8J/wHAAQABPwb/AfACAAP/AfAGAAEfCf8CAAEfBv8B8AIAA/8B8AYA
+        AR8B/gMAAQMD/wH8AgABDwz/AfAGAAEfAf4DAAEDA/8B8AEAAXgBBwf/AeABfwP/AfAGAAEfAf4DAAED
+        A/8BwAEDAf4BBwf/AeABfwP/AfAGAAEfAf4DAAEDA/8BgAEfAf8BBwf/AeABfwP/AfAGAAEfAf4DAAED
+        A/8BAAF/Af8BBwf/AeABfwP/AfAGAAEfAeAGAAEHAQEC/wEHB/8B4AF/A/8B8AYAAR8B4AYAAQcBhwL/
+        AQcH/wHgAX8D/wHwBgABHwHgBgABBwHPAf8B/AEBB/8B4AF/A/8B8AYAAR8B4AYAAQcC/wH4AQAH/wHg
+        AX8D/wHwBgABHwHgBgABBwL/AfABAAF/Bv8B4AF/A/8B8AYAAR8B4AYAAQcC/wHgAQABPwb/AeABfwP/
+        AfAGAAEfAeAGAAEHAv8BwAEAAR8G/wHgAX8D/wHwBgABHwHgBgABBwL/AYABAAEPBv8B4AF/A/8B8AYA
+        AR8B4AYAAQcC/wIAAQcG/wHgAX8D/wHwBgABHwHgBgABBwH/Af4CAAEDBv8B4AF/A/8B8AYAAR8B4AYA
+        AQcB/wH8AgABAQb/AeABfwP/AfAGAAEfAeAGAAEHAf8B+AMABv8B4AF/A/8B8AYAAR8B4AYAAQcB/wHw
+        AwABfwX/AeABfwP/AfAGAAEfAeAGAAEHAf8B8AMAAX8F/wHgAX8D/wHwBgABHwHgBgABBwH/AfADAAF/
+        Bf8B4AF/A/8B8AYAAR8B4AYAAQcB/wHwAwABfwX/AeABfwP/AfAGAAEfAeAGAAEHAf8B8AMAAX8F/wHg
+        AX8D/wHwBgABHwHgBgABBwH/AfADAAF/Bf8B4AF/A/8B8AYAAR8B4AYAAQcB/wHwAwABfwX/AeEE/wHw
+        BgABHwHgBgABBwH/AfADAAF/Bf8B4QGAAgABAwHwBgABHwHgBgABBwH/AfADAAF/Bf8B4QGAAgABAwHw
+        BgABHwHgBgABBwH/AfADAAF/Bf8B4QGAAgABAwHwBgABHwHgBgABBwH/AfADAAF/Bf8B4QGAAgABAwHw
+        BgABHwHgBgABBwH/AfADAAF/Bf8B4QGAAgABAwHwBgABHwHgBgABBwH/AfADAAF/Bf8B4QGAAgABAwHw
+        BgABHwHgBgABBwH/AfADAAF/Bf8B4QGAAgABAwHwBgABHwHgBgABBwH/AfADAAF/Bf8B4QGAAgABAwHw
+        BgABHwHgBgABBwH/AfADAAF/Bf8B4QGAAgABAwHwBgABHwHgBgABBwH/AfADAAF/Bf8B4QGAAgABAwHw
+        BgABHwHgBgABBwH/AfADAAF/Bv8BgAIAAQMB8AYAAR8B4AYAAQcM/wGAAgABAwHwBgABHwHgBgABBwH/
+        AfwCAAEDB/8BgAIAAQMB8AYAAR8B4AYAAQcB/wH8AgABAwf/AYACAAEDAfAGAAEfAeAGAAEHAf8B/AIA
+        AQMH/wGAAgABAwHwBgABHwHgBgABBwH/AfwCAAEDB/8BgAIAAQMB8AYAAR8B4AYAAQcB/wH8AgABAwf/
+        AYACAAEDAfAGAAEfAeAGAAEHAf8B/AIAAQMH/wGAAgABAwHwBgABHwn/AfwCAAEDB/8BgAIAAQMB8AYA
+        AR8J/wH8AgABAwf/AYACAAEDAfAGAAEfCf8B/AIAAQMH/wGAAgABAwHwBgABHwn/AfwCAAEDB/8BgAIA
+        AQMB8AYAAR8J/wH8AgABAwf/AYACAAEDAfAGAAEfCf8B/AIAAQMH/wGAAgABAwHwBgABHwn/AfwCAAED
+        B/8BgAIAAQMB8AYAAR8J/wH8AgABAwf/AYACAAEDAfgGAAE/Cf8B/AIAAQMH/wGAAgABAxH/Af4CAAED
+        B/8BgAIAAQMR/wH+AgABAzP/Cw==
+</value>
+  </data>
+  <metadata name="deviceBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 17</value>
+  </metadata>
+  <metadata name="cryptoCoinBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>509, 17</value>
+  </metadata>
+  <metadata name="coinInformationBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>292, 17</value>
+  </metadata>
+  <metadata name="deviceDetailsResponseBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>699, 17</value>
+  </metadata>
+  <metadata name="deviceBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 17</value>
+  </metadata>
+  <metadata name="deviceInformationResponseBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
+  </metadata>
+  <metadata name="cryptoCoinBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>509, 17</value>
+  </metadata>
 </root>
