Initial work on displaying standalone Network Devices in the UI

--- a/MultiMiner.Win/MainForm.resx
+++ b/MultiMiner.Win/MainForm.resx
@@ -140,7 +140,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAO
-        CQAAAk1TRnQBSQFMAgEBAwEAAeABEgHgARIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CQAAAk1TRnQBSQFMAgEBAwEAAfABEgHwARIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -934,8 +934,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD8
-        EwAAAk1TRnQBSQFMAgEBBAEAAeABAwHgAQMBMAEAATABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABS
+        GQAAAk1TRnQBSQFMAgEBBQEAAfABAwHwAQMBMAEAATABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABwAMAAWADAAEBAQABCAYAAUgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -963,64 +963,87 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8A/wD/AP8A
-        /wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A
-        VAAQ7LAAEOwYACT/ZgAN9wHzEOwB8w33BwAB/wG8JuwBBwH/PwAB/wHzAfIC8QHzAf8dAA33AfMQ7AHz
-        DfcHAAG8KOwBBzwAAfQBBwHsB20B7wH0GwAN9wHzEOwB8w33BwAq7AH/OQAB8wH3C20B6wHyGgAN9wHz
-        EOwB8w33BgAB/yrsAf8GABaQGwAB9AH3Bm0B7APvAe0EbQH0JwAQ7BQAAf8q7AH/BgABkAJ6AZACegGQ
-        AnoBkAJ6AZACegGQAnoBkAJ6AZAZAAH/AQcFbQHsAfAB9AUAAfQB7QJtAe8nABDsFAAB/wrsAvQC7AL0
-        AuwC9ALsAvQC7AL0AuwC9ArsAf8GAAGQAnoBkAJ6AZACegGQAnoBkAJ6AZACegGQAnoBkBgAAfAB6wRt
-        AfcB8gH/CAAB9AJtAewtAATzGgAB/wrsAvQC7AL0AuwC9ALsAvQC7AL0AuwC9ArsAf8GAAGQAnkBkAJ5
-        AZACeQGQAnkBkAJ5AZACeQGQAnkBkAMAAf8BAAP/AQAL/wMAAfEEbQHvAfQMAAHrAm0tAAT3GgAB/wrs
-        AvQC7AL0AuwC9ALsAvQC7AL0AuwC9ArsAf8EACyQAwABBwJtAfcB9A4AAewCbS0ABPcaAAH/CuwC9ALs
-        AvQC7AL0AuwC9ALsAvQC7AL0CuwB/wQALJADAAH/AQcB8w4AAfMBvAOuAbwB8ysABPcaAAH/KuwB/wQA
-        LJATAAHxB60B8SoABPcaAAH/BewE9BjsBPQF7AH/BAADkAP/ApAD/wKQA/8EkAn/A5AJ/wOQEgAB8Qmt
-        AfEpAAT3GgAB/wXsBPQC7BT0AuwE9AXsAf8EAAOQA/8CkAP/ApAD/wSQCf8DkAn/A5ARAAHxC60B8SgA
-        BPcaAAH/C+wU9AvsAf8EAAOQA/8CkAP/ApAD/wSQCf8DkAn/A5AQAAHxDa0B8ScABPcaAAH/C+wU9Avs
-        Af8EAAOQA/8CkAP/ApAD/wSQCf8DkAn/A5APAAHxD60B8SYABPcaAAH/BewE9ALsFPQC7AT0BewB/wQA
-        A5AD/wKQA/8CkAP/HJAOAAHxEa0B8SUABPcaAAH/BewE9ALsAfQS8wH0AuwE9AXsAf8EACyQDQAB8ROt
-        AfEkAAT3GgAB/wvsAfQS8wH0C+wB/wQAFJAJ/wOQCf8DkAwAAfEVrQHxIwAE9xoAAf8L7AH0A/MD9AHz
-        AvQD8wP0A/MB9AvsAf8EABSQCf8DkAn/A5AMAAGzFa0BsyMABPcaAAH/BewE9ALsAfQC8wH0AbwCFAH/
-        ARIBvALzAfQB8AISAfAC8wH0AuwE9AXsAf8EAAOQDf8EkAn/A5AJ/wOQDAAXrSMABPcaAAH/BewE9ALs
-        AfQB8wH0AfEBFAHvAfcB/wESAQcC8wH0ARIC7wESAfQB8wH0AuwE9AXsAf8EAAOQDf8EkAn/A5AJ/wOQ
-        DAAXrSMABPcaAAH/C+wB9AHzAfQB9wEUAf8C9AESAuoC8wESAfMB9AESAfQB8wH0C+wB/wQAA5AN/xyQ
-        DAAXrSMABPcaAAH/C+wB9AHzAfQB7wEUAf8C9AESAQcB8wHqAfQBEgHzAfQBEgH0AfMB9AvsAf8EAAOQ
-        Df8ckAwAF60jAAT3GgAB/wXsBPQC7AH0A/MBFAKSAf8BEgHtAfMB6gHzARIB8wH0ARIB9AHzAfQC7AT0
-        BewB/wQAA5AN/wSQCf8DkAn/A5AMABetIwAE9xoAAf8F7AT0AuwB9ALzAfQB8QIUAf8BEgLqAfQB8wES
-        AfMB9AESAfQB8wH0AuwE9AXsAf8EAAOQDf8EkAn/A5AJ/wOQDAAXrSMABPcCAAGSFOwBkgIAAf8L7AH0
-        A/MD9AHzA/QC8wH0AfMC9ALzAfQL7AH/BAADkA3/BJAJ/wOQCf8DkAwAF60jAAT3AgAW7AIAAf8L7AH0
-        EvMB9AvsAf8EAAOQDf8EkAn/A5AJ/wOQDAAXrSMABPcCAALsEv8C7AIAAf8F7AT0AuwU9ALsBPQF7AH/
-        BAADkA3/HJAMABetIwAE9wIAAuwS/wLsAgAB/wXsBPQC7BT0AuwE9AXsAf8EAAOQDf8ckAwAF60jAAT3
-        AgAC7AL/Dm0C/wLsAgAB/wvsFPQL7AH/BAADkA3/BJAJ/wOQCf8DkAwAAbQVrQG0IwAE9wIAAuwS/wLs
-        AgAB/wvsFPQL7AH/BAADkA3/BJAJ/wOQCf8DkAwAAfQBtROtAbUB9CMABPcCAALsEv8C7AIAAf8F7AT0
-        AuwU9ALsBPQF7AH/BAADkA3/BJAJ/wOQCf8DkEwAAuwC/w5tAv8C7AIAAf8F7AT0GOwE9AXsAf8EAAOQ
-        Df8EkAn/A5AJ/wOQDgAC7A//AuwrAALsEv8C7AIAAf8q7AH/BAAskA4AAuwP/wLsKwAC7BL/AuwCAAH/
-        CuwC9ALsAvQC7AL0AuwC9ALsAvQC7AL0CuwB/wQALJAOAALsD/8C7CsAAuwC/w5tAv8C7AIAAf8K7AL0
-        AuwC9ALsAvQC7AL0AuwC9ALsAvQK7AH/BAAskA4AAuwP/wLsKwAC7BL/AuwCAAH/CuwC9ALsAvQC7AL0
-        AuwC9ALsAvQC7AL0CuwB/wQALJAOAALsD/8C7CsAAuwS/wLsAgAB/wrsAvQC7AL0AuwC9ALsAvQC7AL0
-        AuwC9ArsAf8+AALsAv8EEgP/BBIC/wLsKwAC7AL/Dm0C/wLsAgAB/yrsAf8+AALsAv8EEgP/BBIC/wLs
-        KwAC7BL/AuwCAAH/KuwB/z4AAuwC/wQSA/8EEgL/AuwrAALsEv8C7AMAKuw/AALsD/8C7CsAFosDAAHw
-        KOwBvD8AAuwP/wLsKwAWiwMAAf8B8CbsAbwB/z8AAuwP/wLsKwAWi2wAAZIR7AGSKwAWi2wAAfMBkg/s
-        AZIB8ysAFoswAAFCAU0BPgcAAT4DAAEoAwABwAMAAWADAAEBAQABAQYAAQkWAAP//wD/AP8A/wCFACX/
-        AfwBAAEDFf8B/AEAAQMC/wH8BAABPwz/BQABDwHgBAABBwf/AfABHwP/BQABDwHgBAABBwf/AYABBwP/
-        BQABDwHgBAABAwb/Af4BAAEDA/8FAAEPAcAEAAEDAfACAAE/Av8B+AEAAQEE/wH8AQABAwL/AcAEAAED
-        AfACAAE/Av8B4AEHAcEE/wH8AQABAwL/AcAEAAEDAfACAAE/Av8BwAEfAeEF/wHwA/8BwAQAAQMB8AIA
-        AToBIAEDAYAB/wHxBf8B8AP/AcAEAAEDAcAEAAEDAYMB/wHxBf8B8AP/AcAEAAEDAcAEAAEDAY8B/wHA
-        AX8E/wHwA/8BwAQAAQMBwAQAAQMC/wGAAT8E/wHwA/8BwAQAAQMBwAQAAQMC/wEAAR8E/wHwA/8BwAQA
-        AQMBwAQAAQMB/wH+AQABDwT/AfAD/wHABAABAwHABAABAwH/AfwBAAEHBP8B8AP/AcAEAAEDAcAEAAED
-        Af8B+AEAAQME/wHwA/8BwAQAAQMBwAQAAQMB/wHwAQABAQT/AfAD/wHABAABAwHABAABAwH/AeACAAT/
-        AfAD/wHABAABAwHABAABAwH/AcACAAF/A/8B8AP/AcAEAAEDAcAEAAEDAf8BwAIAAX8D/wHwA/8BwAQA
-        AQMBwAQAAQMB/wHAAgABfwP/AfAD/wHABAABAwHABAABAwH/AcACAAF/A/8B8AP/AcAEAAEDAcAEAAED
-        Af8BwAIAAX8D/wHwA/8BwAQAAQMBwAQAAQMB/wHAAgABfwP/AfAD/wHABAABAwHABAABAwH/AcACAAF/
-        A/8B8AP/AcAEAAEDAcAEAAEDAf8BwAIAAX8D/wHwAcACAAHABAABAwHABAABAwH/AcACAAF/A/8B8AHA
-        AgABwAQAAQMBwAQAAQMB/wHAAgABfwP/AfABwAIAAcAEAAEDAcAEAAEDAf8BwAIAAX8D/wHwAcACAAHA
-        BAABAwHABAABAwH/AcACAAF/A/8B8AHAAgABwAQAAQMBwAQAAQMB/wHAAgABfwP/AfABwAIAAcAEAAED
-        AcAEAAEDAf8BwAIAAX8D/wHwAcACAAHABAABAwHABAABAwn/AcACAAHABAABAwHABAABAwH/AfABAAEB
-        Bf8BwAIAAcAEAAEDAcAEAAEDAf8B8AEAAQEF/wHAAgABwAQAAQMBwAQAAQMB/wHwAQABAQX/AcACAAHA
-        BAABAwHABAABAwH/AfABAAEBBf8BwAIAAcAEAAEDAcAEAAEDAf8B8AEAAQEF/wHAAgABwAQAAQMH/wHw
-        AQABAQX/AcACAAHABAABAwf/AfABAAEBBf8BwAIAAcAEAAEDB/8B8AEAAQEF/wHAAgAB4AQAAQcH/wHw
-        AQABAQX/AcACAAHgBAABBwf/AfABAAEBBf8BwAIAAeAEAAEHB/8B8AEAAQEF/wHAAgAN/wHwAQABAQX/
-        AcACAA3/AfABAAEBBf8BwAIABv8L
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/yQAAv+6AAH/AfABtQG0
+        Aq0BswG1AfAB/7QAAf8BCQqtAbsB/7EAAfQBtAOtAbQBrQK7Aa0BtAOtAbQB9K8AAfQBtAKtAbsB9AG7
+        Aa0B9AH/Aa0BuwH/AbsCrQGzAfStAAH/AbQCrQHxAQAB/wK0Af8BAAG0Aa0B/wEAAfICrQG0Af+sAAG8
+        Aq0B8QIAAfQBrQG7AgABCQGtAfQCAAHzAq0Bu6sAAf8CrQG7AwAB8QGtAfACAAHyAa0B8AMAAQkCrQH0
+        qgAB8BStAQmqAAG1FK0BtJQAFJAB8wEAAbQBrQEJBP8BtAGtBP8BtAGtBP8B8AKtAf+TAAGQAnoBkAJ6
+        AZACegGQAnoBkAJ6AZACegGQAXoBAAH/Aq0B8AQAArQEAAG0Aa0B/wMAAfICrQH/kwABkAJ6AZACegGQ
+        AnoBkAJ6AZACegGQAnoBkAF6AQAB/wKtAfAEAAK0BAABtAGtAf8DAAHyAq0B/5MAAZACeQGQAnkBkAJ5
+        AZACeQGQAnkBkAJ5AZABeQIAAbQBrQEJBP8BtAGzBP8BtAGtBP8B8AKtAf+RABaQAfMBAAG1FK0BtJIA
+        FpAB8QEAAfAUrQEJkgAWkAGYAQAB/wKtAbsDAAHxAa0B8QIAAfMBrQHwAwABCQKtAfSSAAOQA/8CkAP/
+        ApAD/wSQBP8BAAG8Aq0B8QIAAfQBrQG7AgABvAGtAfMCAAHzAq0Bu5MAA5AD/wKQA/8CkAP/BJAD/wH0
+        AQAB/wG0Aq0B8AEAAf8CtAH/AQABtAGtAf8BAAHyAq0BtAH/kwADkAP/ApAD/wKQA/8EkAT/AfQBAAH/
+        AbQCrQG7AfQBuwGtAfQB/wGtAbsB/wG7Aq0BtAH0lAADkAP/ApAD/wKQA/8EkAb/AQAB/wG0A60BtAGt
+        AbsBCQGtAbQDrQG0AfSVAAOQA/8CkAP/ApAD/wmQAZ0B/wEAAf8B8AG0CK0BswG8Af+WABqQAZ0B9AIA
+        Af8B8gG7ArQBswG0AbsB8QH/AQAB9JYAFJAI/wEIAf8JAAH/AQgBkJYAFJAI/wKQAZgC9AMAA/QDkJYA
+        A5AN/wSQCP8DkAj/A5CWAAOQDf8EkAj/A5AI/wOQlgADkA3/GpCWAAOQDf8akJYAA5AN/wSQCP8DkAj/
+        A5CWAAOQDf8EkAj/A5AI/wOQlgADkA3/BJAI/wOQCP8DkJYAA5AN/wSQCP8DkAj/A5CWAAOQDf8akJYA
+        A5AN/xqQlgADkA3/BJAI/wOQCP8DkJYAA5AN/wSQCP8DkAj/A5CWAAOQDf8EkAj/A5AI/wOQlgADkA3/
+        BJAI/wOQCP8DkJYAKpCWACqQlgAqkJYAKpD/AP8A/wD/AP8AiAAQ7LAAEOwYACT/ZgAN9wHzEOwB8w33
+        BwAB/wG8JuwBBwH/PwAB/wHzAfIC8QHzAf8dAA33AfMQ7AHzDfcHAAG8KOwBBzwAAfQBBwHsB20B7wH0
+        GwAN9wHzEOwB8w33BwAq7AH/OQAB8wH3C20B6wHyGgAN9wHzEOwB8w33BgAB/yrsAf8GABaQGwAB9AH3
+        Bm0B7APvAe0EbQH0JwAQ7BQAAf8q7AH/BgABkAJ6AZACegGQAnoBkAJ6AZACegGQAnoBkAJ6AZAZAAH/
+        AQcFbQHsAfAB9AUAAfQB7QJtAe8nABDsFAAB/wrsAvQC7AL0AuwC9ALsAvQC7AL0AuwC9ArsAf8GAAGQ
+        AnoBkAJ6AZACegGQAnoBkAJ6AZACegGQAnoBkBgAAfAB6wRtAfcB8gH/CAAB9AJtAewtAATzGgAB/wrs
+        AvQC7AL0AuwC9ALsAvQC7AL0AuwC9ArsAf8GAAGQAnkBkAJ5AZACeQGQAnkBkAJ5AZACeQGQAnkBkAMA
+        Af8BAAP/AQAL/wMAAfEEbQHvAfQMAAHrAm0tAAT3GgAB/wrsAvQC7AL0AuwC9ALsAvQC7AL0AuwC9Ars
+        Af8EACyQAwABBwJtAfcB9A4AAewCbS0ABPcaAAH/CuwC9ALsAvQC7AL0AuwC9ALsAvQC7AL0CuwB/wQA
+        LJADAAH/AQcB8w4AAfMBvAOuAbwB8ysABPcaAAH/KuwB/wQALJATAAHxB60B8SoABPcaAAH/BewE9Bjs
+        BPQF7AH/BAADkAP/ApAD/wKQA/8EkAn/A5AJ/wOQEgAB8QmtAfEpAAT3GgAB/wXsBPQC7BT0AuwE9AXs
+        Af8EAAOQA/8CkAP/ApAD/wSQCf8DkAn/A5ARAAHxC60B8SgABPcaAAH/C+wU9AvsAf8EAAOQA/8CkAP/
+        ApAD/wSQCf8DkAn/A5AQAAHxDa0B8ScABPcaAAH/C+wU9AvsAf8EAAOQA/8CkAP/ApAD/wSQCf8DkAn/
+        A5APAAHxD60B8SYABPcaAAH/BewE9ALsFPQC7AT0BewB/wQAA5AD/wKQA/8CkAP/HJAOAAHxEa0B8SUA
+        BPcaAAH/BewE9ALsAfQS8wH0AuwE9AXsAf8EACyQDQAB8ROtAfEkAAT3GgAB/wvsAfQS8wH0C+wB/wQA
+        FJAJ/wOQCf8DkAwAAfEVrQHxIwAE9xoAAf8L7AH0A/MD9AHzAvQD8wP0A/MB9AvsAf8EABSQCf8DkAn/
+        A5AMAAGzFa0BsyMABPcaAAH/BewE9ALsAfQC8wH0AbwCFAH/ARIBvALzAfQB8AISAfAC8wH0AuwE9AXs
+        Af8EAAOQDf8EkAn/A5AJ/wOQDAAXrSMABPcaAAH/BewE9ALsAfQB8wH0AfEBFAHvAfcB/wESAQcC8wH0
+        ARIC7wESAfQB8wH0AuwE9AXsAf8EAAOQDf8EkAn/A5AJ/wOQDAAXrSMABPcaAAH/C+wB9AHzAfQB9wEU
+        Af8C9AESAuoC8wESAfMB9AESAfQB8wH0C+wB/wQAA5AN/xyQDAAXrSMABPcaAAH/C+wB9AHzAfQB7wEU
+        Af8C9AESAQcB8wHqAfQBEgHzAfQBEgH0AfMB9AvsAf8EAAOQDf8ckAwAF60jAAT3GgAB/wXsBPQC7AH0
+        A/MBFAKSAf8BEgHtAfMB6gHzARIB8wH0ARIB9AHzAfQC7AT0BewB/wQAA5AN/wSQCf8DkAn/A5AMABet
+        IwAE9xoAAf8F7AT0AuwB9ALzAfQB8QIUAf8BEgLqAfQB8wESAfMB9AESAfQB8wH0AuwE9AXsAf8EAAOQ
+        Df8EkAn/A5AJ/wOQDAAXrSMABPcCAAGSFOwBkgIAAf8L7AH0A/MD9AHzA/QC8wH0AfMC9ALzAfQL7AH/
+        BAADkA3/BJAJ/wOQCf8DkAwAF60jAAT3AgAW7AIAAf8L7AH0EvMB9AvsAf8EAAOQDf8EkAn/A5AJ/wOQ
+        DAAXrSMABPcCAALsEv8C7AIAAf8F7AT0AuwU9ALsBPQF7AH/BAADkA3/HJAMABetIwAE9wIAAuwS/wLs
+        AgAB/wXsBPQC7BT0AuwE9AXsAf8EAAOQDf8ckAwAF60jAAT3AgAC7AL/Dm0C/wLsAgAB/wvsFPQL7AH/
+        BAADkA3/BJAJ/wOQCf8DkAwAAbQVrQG0IwAE9wIAAuwS/wLsAgAB/wvsFPQL7AH/BAADkA3/BJAJ/wOQ
+        Cf8DkAwAAfQBtROtAbUB9CMABPcCAALsEv8C7AIAAf8F7AT0AuwU9ALsBPQF7AH/BAADkA3/BJAJ/wOQ
+        Cf8DkEwAAuwC/w5tAv8C7AIAAf8F7AT0GOwE9AXsAf8EAAOQDf8EkAn/A5AJ/wOQDgAC7A//AuwrAALs
+        Ev8C7AIAAf8q7AH/BAAskA4AAuwP/wLsKwAC7BL/AuwCAAH/CuwC9ALsAvQC7AL0AuwC9ALsAvQC7AL0
+        CuwB/wQALJAOAALsD/8C7CsAAuwC/w5tAv8C7AIAAf8K7AL0AuwC9ALsAvQC7AL0AuwC9ALsAvQK7AH/
+        BAAskA4AAuwP/wLsKwAC7BL/AuwCAAH/CuwC9ALsAvQC7AL0AuwC9ALsAvQC7AL0CuwB/wQALJAOAALs
+        D/8C7CsAAuwS/wLsAgAB/wrsAvQC7AL0AuwC9ALsAvQC7AL0AuwC9ArsAf8+AALsAv8EEgP/BBIC/wLs
+        KwAC7AL/Dm0C/wLsAgAB/yrsAf8+AALsAv8EEgP/BBIC/wLsKwAC7BL/AuwCAAH/KuwB/z4AAuwC/wQS
+        A/8EEgL/AuwrAALsEv8C7AMAKuw/AALsD/8C7CsAFosDAAHwKOwBvD8AAuwP/wLsKwAWiwMAAf8B8Cbs
+        AbwB/z8AAuwP/wLsKwAWi2wAAZIR7AGSKwAWi2wAAfMBkg/sAZIB8ysAFoswAAFCAU0BPgcAAT4DAAEo
+        AwABwAMAAWADAAEBAQABAQYAAQkWAAP/AQAE/wHnAf8SAAP/Af4BAAF/EgAD/wH4AQABHxIAA/8B8AEA
+        AQ8SAAP/AeABAAEHEgAD/wHBAQgBgxIAA/8BwwEYAcMSAAP/AYcBGAHhEgAD/wGAAQABARIAA/8BgAEA
+        AQESAAHgAgABgBQAAeABAAEBAQ8BPAFwEgAB4AEAAQEBDwE8AXASAAHgAQABAQGAFAABgAIAAYABAAEB
+        EgABgAIAAYABAAEBEgABgAIAAYcBGAHhEgABgAIAAUMBGAHDEgABgAIAAUEBCAGDEgABgAIAASABAAEH
+        EgABgAIAARABAAEPEgABgAIAAQgBAAEfEgABgAIAAQYBAAFfEgABgAIAAQEB/wEfEgABgAMAATgBHxIA
+        AYAEAAEfEgABgAQAAR8SAAGABAABHxIAAYAEAAEfEgABgAQAAR8SAAGABAABHxIAAYAEAAEfEgABgAQA
+        AR8SAAGABAABHxIAAYAEAAEfEgABgAQAAR8SAAGABAABHxIAAYAEAAEfEgABgAQAAR8SAAGABAABHxIA
+        AYAEAAEfEgABgAQAAR8SAAGABAABHxIABv8SAAb/EgAG/xIABv8SAAb/EgAl/wH8AQABAxX/AfwBAAED
+        Av8B/AQAAT8M/wUAAQ8B4AQAAQcH/wHwAR8D/wUAAQ8B4AQAAQcH/wGAAQcD/wUAAQ8B4AQAAQMG/wH+
+        AQABAwP/BQABDwHABAABAwHwAgABPwL/AfgBAAEBBP8B/AEAAQMC/wHABAABAwHwAgABPwL/AeABBwHB
+        BP8B/AEAAQMC/wHABAABAwHwAgABPwL/AcABHwHhBf8B8AP/AcAEAAEDAfACAAE6ASABAwGAAf8B8QX/
+        AfAD/wHABAABAwHABAABAwGDAf8B8QX/AfAD/wHABAABAwHABAABAwGPAf8BwAF/BP8B8AP/AcAEAAED
+        AcAEAAEDAv8BgAE/BP8B8AP/AcAEAAEDAcAEAAEDAv8BAAEfBP8B8AP/AcAEAAEDAcAEAAEDAf8B/gEA
+        AQ8E/wHwA/8BwAQAAQMBwAQAAQMB/wH8AQABBwT/AfAD/wHABAABAwHABAABAwH/AfgBAAEDBP8B8AP/
+        AcAEAAEDAcAEAAEDAf8B8AEAAQEE/wHwA/8BwAQAAQMBwAQAAQMB/wHgAgAE/wHwA/8BwAQAAQMBwAQA
+        AQMB/wHAAgABfwP/AfAD/wHABAABAwHABAABAwH/AcACAAF/A/8B8AP/AcAEAAEDAcAEAAEDAf8BwAIA
+        AX8D/wHwA/8BwAQAAQMBwAQAAQMB/wHAAgABfwP/AfAD/wHABAABAwHABAABAwH/AcACAAF/A/8B8AP/
+        AcAEAAEDAcAEAAEDAf8BwAIAAX8D/wHwA/8BwAQAAQMBwAQAAQMB/wHAAgABfwP/AfAD/wHABAABAwHA
+        BAABAwH/AcACAAF/A/8B8AHAAgABwAQAAQMBwAQAAQMB/wHAAgABfwP/AfABwAIAAcAEAAEDAcAEAAED
+        Af8BwAIAAX8D/wHwAcACAAHABAABAwHABAABAwH/AcACAAF/A/8B8AHAAgABwAQAAQMBwAQAAQMB/wHA
+        AgABfwP/AfABwAIAAcAEAAEDAcAEAAEDAf8BwAIAAX8D/wHwAcACAAHABAABAwHABAABAwH/AcACAAF/
+        A/8B8AHAAgABwAQAAQMBwAQAAQMJ/wHAAgABwAQAAQMBwAQAAQMB/wHwAQABAQX/AcACAAHABAABAwHA
+        BAABAwH/AfABAAEBBf8BwAIAAcAEAAEDAcAEAAEDAf8B8AEAAQEF/wHAAgABwAQAAQMBwAQAAQMB/wHw
+        AQABAQX/AcACAAHABAABAwHABAABAwH/AfABAAEBBf8BwAIAAcAEAAEDB/8B8AEAAQEF/wHAAgABwAQA
+        AQMH/wHwAQABAQX/AcACAAHABAABAwf/AfABAAEBBf8BwAIAAeAEAAEHB/8B8AEAAQEF/wHAAgAB4AQA
+        AQcH/wHwAQABAQX/AcACAAHgBAABBwf/AfABAAEBBf8BwAIADf8B8AEAAQEF/wHAAgAN/wHwAQABAQX/
+        AcACAAb/Cw==
 </value>
   </data>
   <metadata name="smallImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1030,8 +1053,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD8
-        CQAAAk1TRnQBSQFMAgEBBAEAAeABAwHgAQMBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA0
+        CwAAAk1TRnQBSQFMAgEBBQEAAfABAwHwAQMBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -1059,7 +1082,11 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AKQAG7AYA
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/woAAfQDiwHzOgABtQGL
+        AbwBuwG8AYsBtDIAAZACegGQAXoBGgHzAYsBAAGLAf8BiwEAAYsB8zEAAZACegGQAXoB/wmLMAAGkAEA
+        AYsCAAGLAQABiwIAAYswAAaQAQAJizAAApAC/wGQAv8B8wGLAQABiwH/AYsBAAGLAfMwAAKQAv8BkAH/
+        AfQBAAG1AYsBvAG7AbwBiwG0MQAHkAHxAQAB9AOLAfMB8TEACJABCAH/AgAB/wH0AZAxAAKQBf8CkAL/
+        AZAC/wGQMQACkAX/CJAxAAKQBf8CkAL/AZAC/wGQMQACkAX/ApAC/wGQAv8BkDEAD5AxAA+QVQAG7AYA
         AfIBBwzsAQcB8gEAAZACegGQAnoBkAJ6AZAVAAOSAfIG7AHxBJIBAAEHBOwB/wHsAf8B7AH/AewB/wPs
         AQcBAAGQAnoBkAJ6AZACegGQBAAB/wHzAe8DbQHsAf8JAAOSAfIG7AHxBJIBAAXsAf8B7AH/AewB/wHs
         Af8E7BCQAesBBwHzAf8B8AGuAYsMAAH/BuwGAAPsCusD7BCQAf8DAAStDgAC8QgAAewC/wHrAfMG9AHz
@@ -1071,9 +1098,10 @@
         AewCkAX/ApAC/wGQAv8CkAIAAewG/wHsAf8MAAFtAf8FbQH/AW0D7ArrA+wQkAIAAewB/wHrAgcB6wH/
         AewB/wwAAW0H/wFtBOwB/wHsAf8B7AH/AewB/wXsEJACAAHsBv8B7AH/DAAJiwEHA+wB/wHsAf8B7AH/
         AewB/wTsAQcSAAEHBuwB7w0ACYsB8gEHDOwBBwHyAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEB
-        BgABARYAA/+BAAT/AfABPwIAAYABHwL/AQABAQIAAYABHgEBAf8BAAEBBAABAQH/AeABPwQAAXAB/wH8
-        Af8EAAHgAX8B/AF/BAABwAE/AfwB/wQAAYABHwH8Af8EAAGAAR8B/gUAAYABHwH+BQABgAEfAf4FAAHA
-        AT8B/gUAAcABHwH+BQABwAEfAf4FAAHAAR8B/gMAAv8BwAE/Af4DAAs=
+        BgABARYAA/8BAAH/AYMGAAH/AQEGAAGAAUQGAAGABwABAgHWBgABAggAAUQGAAIBBwABgQcAATEHAAEB
+        BwABAQcAAQEHAAEBBwABAQcAAQEGAAT/AfABPwIAAYABHwL/AQABAQIAAYABHgEBAf8BAAEBBAABAQH/
+        AeABPwQAAXAB/wH8Af8EAAHgAX8B/AF/BAABwAE/AfwB/wQAAYABHwH8Af8EAAGAAR8B/gUAAYABHwH+
+        BQABgAEfAf4FAAHAAT8B/gUAAcABHwH+BQABwAEfAf4FAAHAAR8B/gMAAv8BwAE/Af4DAAs=
 </value>
   </data>
   <metadata name="deviceListContextMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1212,8 +1240,14 @@
   <metadata name="remotingServerTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1074, 142</value>
   </metadata>
+  <metadata name="networkDeviceStatsTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 181</value>
+  </metadata>
+  <metadata name="networkDeviceDetectTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>206, 181</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>190</value>
+    <value>363</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
